--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,20 @@
         body {
             font-family: 'Nunito', sans-serif;
         }
+
+        .btn-outline-primary:hover {
+            background-color: rgba(0, 123, 255, 0.4) !important;
+        }
+
+        .btn-outline-secondary:hover {
+            background-color: rgba(108, 117, 125, 0.4) !important;
+        }
+        .btn-outline-danger:hover {
+            background-color: rgba(220, 53, 69, 0.4) !important;
+        }
+        .btn-outline-success:hover {
+            background-color: rgba(40, 167, 69, 0.7) !important;
+        }
     </style>
 </head>
 
