--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,54 @@
         .btn-outline-success:hover {
             background-color: rgba(40, 167, 69, 0.7) !important;
         }
+
+
+        ul {
+            list-style: none;
+        }
+
+        .context-menu {
+            position: absolute;
+        }
+
+        .menu {
+            display: flex;
+            flex-direction: column;
+            background-color: #fff;
+            border-radius: 10px;
+            border: 1px solid rgba(0, 123, 255, 0.4);
+            box-shadow: 0 10px 20px rgb(64 64 64 / 5%);
+            padding: 10px 0;
+        }
+
+            .menu > li > a {
+                font: inherit;
+                border: 0;
+                padding: 10px 30px 10px 15px;
+                width: 100%;
+                display: flex;
+                align-items: center;
+                position: relative;
+                text-decoration: unset;
+                color: #000;
+                font-weight: 500;
+                transition: 0.5s linear;
+                -webkit-transition: 0.5s linear;
+                -moz-transition: 0.5s linear;
+                -ms-transition: 0.5s linear;
+                -o-transition: 0.5s linear;
+            }
+
+                .menu > li:hover {
+                    background: rgba(0, 123, 255, 0.4);
+                    color: #000;
+                    font-weight: bold;
+                    transition: ease-in-out 0.3s;
+                }
+
+                .menu > li > a > i {
+                    padding-right: 10px;
+                }
     </style>
 </head>
 
@@ -96,6 +144,37 @@
 
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script>
+        document.onclick = hideMenu;
+        document.oncontextmenu = rightClick;
+
+        function hideMenu() {
+            try {
+                document.getElementById("contextMenu")
+                    .style.display = "none";
+            } catch (e) {
+
+            }
+        }
+
+        function rightClick(e) {
+            e.preventDefault();
+
+            if (e.target.offsetParent.className === 'card') {
+                if (document.getElementById("contextMenu").style.display == "block") {
+                    hideMenu();
+                } else {
+                    var menu = document.getElementById("contextMenu")
+                    menu.style.display = 'block';
+                    menu.style.left = e.pageX - 110 + "px";
+                    menu.style.top = e.pageY + "px";
+                    menu.style.zIndex = "999";
+
+                }
+            }
+        }
+
+    </script>
 </body>
 
 </html>
